# LCRM

./: .gitignore  crm-b2b-mockup.html
crm-b2b-recuperacao/: README.md  docker-compose.yml
crm-b2b-recuperacao/backend/: Dockerfile  pyproject.toml
crm-b2b-recuperacao/backend/app/: main.py
crm-b2b-recuperacao/backend/app/api/v1/: __init__.py
crm-b2b-recuperacao/backend/app/api/v1/endpoints/: opportunities.py
crm-b2b-recuperacao/backend/app/core/: config.py  database.py
crm-b2b-recuperacao/backend/app/models/: __init__.py
crm-b2b-recuperacao/backend/app/repositories/: opportunity_repository.py
crm-b2b-recuperacao/backend/app/schemas/: __init__.py
crm-b2b-recuperacao/backend/app/services/: ai_service.py
crm-b2b-recuperacao/frontend/: package-lock.json  package.json  vite.config.ts
crm-b2b-recuperacao/frontend/src/: index.css
crm-b2b-recuperacao/frontend/src/services/: api.ts
crm-b2b-recuperacao/frontend/src/stores/: useOpportunityStore.ts
